criando a pagina de login

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>TradeEase</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./assets/494aa774e9b1407cb5ca7112e41e3776-free.png">
 </head>
 <body>
   <app-root></app-root>
